adds class logo-icon

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="nav">
         <div class="logo">
-            <i class="fa fa-paw"></i>
+            <i class="fa fa-paw logo-icon"></i>
             <span class="site-name">jivinjari</span>
         </div>
         <div class="menu">
