adds styles to info section of index.html

--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@
 
         <article class="info">
             <div class="info-detail">
-                <h6>
+                <h5>
                     Over 1000 tourism destinations and travel agencies registered with us
-                </h6>
+                </h5>
                 <p>
                     Use our filtered search to find that tourism 
                     destination that would be most appealing to you.
                 </p>
-                <button type="button">find a destination</button>
+                <button type="button">Find a destination</button>
             </div>
                 
             <img src="./assets/images/cheetah.jpg" alt="" class="info-img">
@@ -132,15 +132,15 @@
 
         <article class="info">
             <div class="info-detail">
-                <h6>
-                    Avoid to much hustle 
-                </h6>
+                <h5>
+                    Avoid too much hustle 
+                </h5>
                 <p>
                     Jivinjari will get you booked with reputable travel 
                     agencies. We also make ensure accomodation availability
                     before your travelling is booked.
                 </p>
-                <button type="button">get booked</button>
+                <button type="button">Get booked</button>
             </div>
                 
             <img src="./assets/images/hotel.jpg" alt="" class="info-img">
@@ -149,9 +149,9 @@
 
         <article class="info">
             <div class="info-detail">
-                <h6>
+                <h5>
                     Save money
-                </h6>
+                </h5>
                 <p>
                     It makes much more sense booking with us. Take 
                     advantage of discounts we get while booking you 
