corrects padding of info section

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <div class="subscribe">
                 <h3>subscribe</h3>
                 <form action="#">
-                    <input type="email" id="email" name="email" placeholder="you@example.com"/>
+                    <input type="email" id="email" name="email" placeholder="you@example.com" />
                     <button type="submit">send</button>
                 </form>
             </div>
@@ -203,8 +203,12 @@
 
             <div class="about">
                 <h3>about</h3>
-                <p>Jivinjari is an online directory for major and best of the best
-                tourism destinations in Kenya. This platform will help you</p>
+                <p>
+                    Jivinjari is an online directory for major and best of the best
+                    tourism destinations in Kenya. This platform will help you get
+                    booked to the best hotels available and ensure you tour the best
+                    destinations too.
+                </p>
             </div>
         </div>
 
