renames classes for proper styling

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <h5>Avoid too much hustle</h5>
                 <p>
                     Jivinjari will get you booked with reputable travel agencies. We
-                    also make ensure accomodation availability before your travelling is
+                    also ensure accomodation availability before your travelling is
                     booked.
                 </p>
                 <button type="button">Get booked</button>
@@ -168,7 +168,7 @@
         <div class="footer-top">
             <ul class="footer-links">
                 <li class="f-links-container">
-                    <ul class="f-links">
+                    <ul class="f-links-left">
                         <li>home</li>
                         <li>search</li>
                         <li>about us</li>
@@ -176,8 +176,8 @@
                     </ul>
                 </li>
                 <li class="f-logo"><i class="fa fa-paw logo-icon"></i></li>
-                <li class="f-links-container f-links-left">
-                    <ul class="f-links">
+                <li class="f-links-container">
+                    <ul class="f-links-right">
                         <li>facebook</li>
                         <li>twitter</li>
                         <li>blog</li>
