adds anchor tags to links

--- a/detail.html
+++ b/detail.html
@@ -15,26 +15,47 @@
 <body>
     <nav class="nav">
         <div class="logo">
-            <i class="fa fa-paw logo-icon"></i>
-            <span class="site-name">jivinjari</span>
+            <a href="./index.html">
+                <i class="fa fa-paw logo-icon"></i>
+            </a>
+            <a href="./index.html">
+                <span class="site-name">jivinjari</span>
+            </a>           
         </div>
+
         <div class="menu">
             <ul class="menu-links">
                 <li>
-                    <i class="fa fa-search menu-icon"></i>
-                    <span>destinations</span>
+                    <a href="./results.html">
+                        <i class="fa fa-search menu-icon"></i>
+                    </a>
+                    <a href="./results.html">
+                        <span>destinations</span>
+                    </a>
                 </li>
                 <li>
-                    <i class="fa fa-user menu-icon"></i>
-                    <span>about</span>
+                    <a href="#">
+                        <i class="fa fa-user menu-icon"></i>
+                    </a>
+                    <a href="#">
+                        <span>about</span>
+                    </a>
                 </li>
                 <li>
-                    <i class="fa fa-rss menu-icon"></i>
-                    <span>blog</span>
+                    <a href="#">
+                        <i class="fa fa-rss menu-icon"></i>
+                    </a>
+                    <a href="#">
+                        <span>blog</span>
+                    </a>
                 </li>
                 <li>
-                    <i class="fa fa-bars menu-icon"></i>
-                    <span>more</span>
+                    <a href="#">
+                        <i class="fa fa-bars menu-icon"></i>
+                    </a>
+                    <a href="#">
+                        <span>more</span>
+                    </a>
                 </li>
             </ul>
         </div>
@@ -144,19 +165,19 @@
             <ul class="footer-links">
                 <li class="f-links-container">
                     <ul class="f-links-left">
-                        <li>home</li>
-                        <li>search</li>
-                        <li>about us</li>
-                        <li>advertise</li>
+                        <li><a href="#">home</a></li>
+                        <li><a href="#">search</a></li>
+                        <li><a href="#">about us</a></li>
+                        <li><a href="#">advertise</a></li>
                     </ul>
                 </li>
                 <li class="f-logo"><i class="fa fa-paw logo-icon"></i></li>
                 <li class="f-links-container">
                     <ul class="f-links-right">
-                        <li>facebook</li>
-                        <li>twitter</li>
-                        <li>blog</li>
-                        <li>google+</li>
+                        <li><a href="#">facebook</a></li>
+                        <li><a href="#">twitter</a></li>
+                        <li><a href="#">blog</a></li>
+                        <li><a href="#">google+</a></li>
                     </ul>
                 </li>
             </ul>
@@ -189,10 +210,10 @@
 
         <div class="footer-bottom">
             <div class="footer-social">
-                <i class="fab fa-facebook-f"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fab fa-linkedin-in"></i>
-                <i class="fab fa-instagram"></i>
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
 
             <div class="footer-copyright">
