adjusts link to steps header

--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
             </div>
         </section>
 
-        <section class="usage" id="instructions">
+        <section class="usage">
             <header>
-                <h3>to "jivinjari", follow these simple steps</h3>
+                <h3 id="instructions">to "jivinjari", follow these simple steps</h3>
             </header>
             <div class="steps">
                 <article class="step">
