--- a/detail.html
+++ b/detail.html
@@ -14,7 +14,7 @@
 
 <body>
     <nav class="nav">
-        <div class="logo">
+        <div class="logo flex-center">
             <a href="./index.html">
                 <i class="fa fa-paw logo-icon"></i>
             </a>
@@ -23,9 +23,9 @@
             </a>           
         </div>
 
-        <div class="menu">
-            <ul class="menu-links">
-                <li>
+        <div class="menu flex-large flex-fit">
+            <ul class="menu-links flex-center flex-fit">
+                <li class="flex-center">
                     <a href="./results.html">
                         <i class="fa fa-search menu-icon"></i>
                     </a>
@@ -33,7 +33,7 @@
                         <span>destinations</span>
                     </a>
                 </li>
-                <li>
+                <li class="flex-center">
                     <a href="#">
                         <i class="fa fa-user menu-icon"></i>
                     </a>
@@ -41,7 +41,7 @@
                         <span>about</span>
                     </a>
                 </li>
-                <li>
+                <li class="flex-center">
                     <a href="#">
                         <i class="fa fa-rss menu-icon"></i>
                     </a>
@@ -49,7 +49,7 @@
                         <span>blog</span>
                     </a>
                 </li>
-                <li>
+                <li class="flex-center">
                     <a href="#">
                         <i class="fa fa-bars menu-icon"></i>
                     </a>
@@ -63,11 +63,11 @@
 
     <main>
 
-        <div class="details">
+        <div class="details full-width">
 
-            <div class="image">
-                <figure>
-                    <img src="./assets/images/mara.jpg" alt="">
+            <div class="image ">
+                <figure class="full-width">
+                    <img src="./assets/images/mara.jpg" alt="The Mara" class="full-width">
                     <figcaption>
                         Kenyan preserve known for big cats, elephants, wildebeest migration & Maasai villages.
                     </figcaption>
@@ -75,24 +75,24 @@
 
                 <div class="fees">
                     <h2>Fees</h2>
-                    <table>
+                    <table class="full-width">
                         <tr>
                             <th>Age group</th>
                             <th>Non-resident</th>
                             <th>Resident</th>
                         </tr>
                         <tr>
-                            <td>Adult</td>
+                            <td class="text-black">Adult</td>
                             <td>&dollar;80</td>
                             <td>&dollar;60</td>
                         </tr>
                         <tr>
-                            <td>3 - 18 years</td>
+                            <td class="text-black">3 - 18 years</td>
                             <td>&dollar;45</td>
                             <td>&dollar;30</td>
                         </tr>
                         <tr>
-                            <td>under 3 years</td>
+                            <td class="text-black">under 3 years</td>
                             <td>Free</td>
                             <td>Free</td>
                         </tr>
@@ -155,16 +155,16 @@
 
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d34387.59489842767!2d34.91909674604047!3d-1.3762192611099155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182ce8a64a31fdb1%3A0x296a9587e0c3c410!2sMaasai%20Mara%20National%20Reserve!5e0!3m2!1sen!2ske!4v1603221748765!5m2!1sen!2ske"
-                height="450" allowfullscreen="" aria-hidden="false" tabindex="0">
+                height="450" allowfullscreen="" aria-hidden="false" tabindex="0" class="full-width">
             </iframe>
         </div>
     </main>
 
     <footer>
         <div class="footer-top">
-            <ul class="footer-links">
-                <li class="f-links-container">
-                    <ul class="f-links-left">
+            <ul class="footer-links flex-center">
+                <li class="f-links-container full-width flex-fit">
+                    <ul class="f-links-left flex-center">
                         <li><a href="#">home</a></li>
                         <li><a href="#">search</a></li>
                         <li><a href="#">about us</a></li>
@@ -172,8 +172,8 @@
                     </ul>
                 </li>
                 <li class="f-logo"><i class="fa fa-paw logo-icon"></i></li>
-                <li class="f-links-container">
-                    <ul class="f-links-right">
+                <li class="f-links-container full-width flex-fit">
+                    <ul class="f-links-right flex-center">
                         <li><a href="#">facebook</a></li>
                         <li><a href="#">twitter</a></li>
                         <li><a href="#">blog</a></li>
